--- a/windows-terminal-emulators-config/windows-alacritty.toml
+++ b/windows-terminal-emulators-config/windows-alacritty.toml
@@ -9,12 +9,11 @@ history = 100_000
 [font]
 size = 18
 
-  [font.normal]
-  family = "DroidSansM Nerd Font Mono"
+[font.normal]
+family = "DroidSansM Nerd Font Mono"
 
-[shell]
-args = ["--cd ~"]
-program = 'C:\Windows\System32\wsl.exe'
+[terminal]
+shell = { program = 'C:\Windows\System32\wsl.exe', args = ["--cd ~"] }
 
 [cursor.style]
 shape = "Underline"
