--- a/windows-terminal-emulators-config/windows-alacritty.toml
+++ b/windows-terminal-emulators-config/windows-alacritty.toml
@@ -12,6 +12,9 @@ size = 18
 [font.normal]
 family = "DroidSansM Nerd Font Mono"
 
+[shell]
+program = "wsl"
+
 [cursor.style]
 shape = "Underline"
 blinking = "On"
