--- a/windows-terminal-emulators-config/windows-alacritty.toml
+++ b/windows-terminal-emulators-config/windows-alacritty.toml
@@ -12,7 +12,7 @@ size = 18
 [font.normal]
 family = "DroidSansM Nerd Font Mono"
 
-[shell]
+[terminal.shell]
 program = "wsl --cd ~"
 
 [cursor.style]
@@ -26,3 +26,5 @@ bindings = [
 
 [selection]
 save_to_clipboard = true
+
+[terminal]
