Update config file

--- a/windows-terminal-emulators-config/windows-alacritty.toml
+++ b/windows-terminal-emulators-config/windows-alacritty.toml
@@ -12,7 +12,7 @@ size = 18
 [font.normal]
 family = "DroidSansM Nerd Font Mono"
 
-[terminal.shell]
+[shell]
 program = "wsl --cd ~"
 
 [cursor.style]
